# engi-blockchain-gql

./: .DEVELOPMENT.md.swp  .editorconfig  .gitignore  .gitmodules  DEVELOPMENT.md  Dockerfile  Engi.Substrate.sln  README.md  docker-compose-dev.yml  docker-compose-generate-docs.yml  docker-compose-integration-tests.yml  docker-compose-services.yml  global.json  localstack-down.sh  localstack-up.sh
.circleci/: config.yml
Engi.Substrate/: Address.cs  Base58Encoding.cs  ChainNewHeadSubscriber.cs  ChainSnapshot.cs  DataEnum.cs  Digest.cs  Engi.Substrate.csproj  Era.cs  GenericEvent.cs  Hashing.cs  Header.cs  Hex.cs  Program.cs  ScaleCompactIntegerJsonConverter.cs  ScaleJsonConverter.cs  ScaleStream.cs  ScaleStreamReader.cs  ScaleStreamWriter.cs  StorageKeys.cs  SubstrateClient.cs  SubstrateClientOptions.cs  SubstrateJsonSerializerOptions.cs
Engi.Substrate.Playground/: Engi.Substrate.Playground.csproj  Program.cs
Engi.Substrate.Server/: ChainObserverBackgroundService.cs  Engi.Substrate.Server.csproj  EngiQuery.cs  EngiRootSchema.cs  Program.cs  Startup.cs  appsettings.Staging.json  appsettings.json
Engi.Substrate.Tests/: Engi.Substrate.Tests.csproj  HeaderTests.cs  KeypairTests.cs  ParserTests.cs  ScaleStreamTests.cs
engi-crypto/: Cargo.toml
engi-crypto/src/: lib.rs
engi-docs/: Dockerfile  config.yml  package.json
engi-playground/: Engi.Substrate.Playground.csproj  Program.cs
engi-server/: ApiOptions.cs  ApplicationOptions.cs  AuthenticationSchemes.cs  AwsOptions.cs  Base64PrivateKeySource.cs  ChainConsistencyException.cs  ChainObserverBackgroundService.cs  (+29 more)
(+845 files in other folders)
